// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parses HTML tag at beginning of string. 1`] = `
Array [
  <strong>
    Hello!
  </strong>,
  " ",
  "T",
  "h",
  "i",
  "s",
  " ",
  "i",
  "s",
  " ",
  "s",
  "o",
  "m",
  "e",
  " ",
  "t",
  "e",
  "x",
  "t",
  " ",
  "w",
  "i",
  "t",
  "h",
  " ",
  "H",
  "T",
  "M",
  "L",
  " ",
  "a",
  "t",
  " ",
  "t",
  "h",
  "e",
  " ",
  "b",
  "e",
  "g",
  "i",
  "n",
  "n",
  "i",
  "n",
  "g",
  ".",
]
`;

exports[`Parses HTML tag at end of string. 1`] = `
Array [
  "T",
  "h",
  "i",
  "s",
  " ",
  "i",
  "s",
  " ",
  "s",
  "o",
  "m",
  "e",
  " ",
  "t",
  "e",
  "x",
  "t",
  " ",
  "w",
  "i",
  "t",
  "h",
  " ",
  "H",
  "T",
  "M",
  "L",
  " ",
  "a",
  "t",
  " ",
  "t",
  "h",
  "e",
  " ",
  <em>
    beginning.
  </em>,
]
`;

exports[`Parses multiple HTML tags. 1`] = `
Array [
  "H",
  "e",
  "l",
  "l",
  "o",
  ",",
  " ",
  "t",
  "h",
  "i",
  "s",
  " ",
  "i",
  "s",
  " ",
  "s",
  "o",
  "m",
  "e",
  " ",
  <strong>
    bold
  </strong>,
  " ",
  "t",
  "e",
  "x",
  "t",
  ",",
  " ",
  "a",
  "n",
  "d",
  " ",
  "s",
  "o",
  "m",
  "e",
  " ",
  <i>
    italicized
  </i>,
  " ",
  "t",
  "e",
  "x",
  "t",
  ".",
]
`;

exports[`Parses normal string correctly. 1`] = `
Array [
  "H",
  "e",
  "l",
  "l",
  "o",
  ",",
  " ",
  "t",
  "h",
  "i",
  "s",
  " ",
  "i",
  "s",
  " ",
  "m",
  "y",
  " ",
  "s",
  "t",
  "r",
  "i",
  "n",
  "g",
  ".",
]
`;

exports[`Parses single HTML tag. 1`] = `
Array [
  "H",
  "e",
  "l",
  "l",
  "o",
  ",",
  " ",
  "t",
  "h",
  "i",
  "s",
  " ",
  "i",
  "s",
  " ",
  "s",
  "o",
  "m",
  "e",
  " ",
  <strong>
    bold
  </strong>,
  " ",
  "t",
  "e",
  "x",
  "t",
  ".",
]
`;
